refactor(arquitetura): reorganiza pacotes e ajusta autenticação